--- a/packages/@examples/01-basic/src/css/sugar.css
+++ b/packages/@examples/01-basic/src/css/sugar.css
@@ -24,7 +24,7 @@
     } */
 }
 
-@sugar.ui.menu.classes();
+/* @sugar.ui.menu.classes(); */
 
 @sugar.partial ('slider') {
   @sugar.ui.slider.classes();
