--- a/packages/@examples/01-basic/src/views/layouts/header/header.twig
+++ b/packages/@examples/01-basic/src/views/layouts/header/header.twig
@@ -6,7 +6,12 @@
                 {% include 'generic/logo/logo.twig' %}
             </div>
             <div class="s-flex-item:grow">
-                {% include 'sugar/menu/generic/generic.twig' %}
+                <div class="__default-menu">
+                    {% include 'sugar/menu/generic/generic.twig' %}
+                </div>
+                <div class="__mobile-menu">
+                    Mobile
+                </div>
             </div>
         </nav>
     </div>
