--- a/packages/@examples/01-basic/src/views/sections/contact/contact.twig
+++ b/packages/@examples/01-basic/src/views/sections/contact/contact.twig
@@ -1,6 +1,6 @@
 <section class="section-contact">
     <div class="s-container">
-        <div class="s-layout:12">
+        <div class="__layout">
             <div>
                 {% include 'sugar/components/contactForm/contactForm.twig' with contactForm only %}
             </div>
