--- a/packages/@examples/01-basic/src/css/generic/menu/menu.css
+++ b/packages/@examples/01-basic/src/css/generic/menu/menu.css
@@ -6,29 +6,31 @@
   position: relative;
   perspective: 800px;
 
-  &:before {
-    opacity: 0;
-    pointer-events: none;
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: sugar.color(accent);
-    z-index: -1;
-    transform: rotateX(0) rotateY(0) translateX(0);
-    @sugar.transition (fast);
-  }
+  &:has(> .s-menu__link) {
+    &:before {
+      opacity: 0;
+      pointer-events: none;
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: sugar.color(accent);
+      z-index: -1;
+      transform: rotateX(0) rotateY(0) translateX(0);
+      @sugar.transition (fast);
+    }
 
-  &:hover:before {
-    opacity: 1;
+    &:hover:before {
+      opacity: 1;
 
-    transform: rotateX(-5deg) rotateY(35deg) translateX(2%);
-  }
+      transform: rotateX(-5deg) rotateY(35deg) translateX(2%);
+    }
 
-  &:nth-child(odd):before {
-    transform: rotateX(5deg) rotateY(-35deg) rotateZ(5deg) translateX(-5%);
+    &:nth-child(odd):before {
+      transform: rotateX(5deg) rotateY(-35deg) rotateZ(5deg) translateX(-5%);
+    }
   }
 }
