--- a/packages/@examples/01-basic/src/views/sections/heading/heading.css
+++ b/packages/@examples/01-basic/src/views/sections/heading/heading.css
@@ -1,28 +1,45 @@
 .section-heading {
-  position: relative;
-  z-index: -1;
+    position: relative;
+    z-index: -1;
 
-  .__bkg {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 1280px;
-    height: 900px;
-    clip-path: url(#clip);
-    transform: translate(-40%, -40%) scale(1.7) rotate(-10deg);
-    /* filter: grayscale(100%);
+    @sugar.media mobile {
+        padding-inline: sugar.padding(30);
+    }
+
+    .__bkg {
+        pointer-events: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 1280px;
+        height: 900px;
+        clip-path: url(#clip);
+        transform: translate(-40%, -40%) scale(1.7) rotate(-10deg);
+        /* filter: grayscale(100%);
         opacity: 0.2; */
 
-    img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-    }
-  }
+        img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
 
-  .s-layout {
-    position: relative;
-    min-height: 80vh;
-    align-items: center;
-  }
+        @sugar.media mobile {
+            display: none;
+        }
+    }
+
+    .__layout {
+        @sugar.layout ('1 2');
+        position: relative;
+        z-index: 10;
+        min-height: 80vh;
+        align-items: center;
+
+        @sugar.media mobile {
+            @sugar.layout ('2 _ 1');
+            padding-block: sugar.padding(100);
+            gap: sugar.margin(50);
+        }
+    }
 }
