--- a/packages/@examples/01-basic/src/views/sections/tabs/tabs.twig
+++ b/packages/@examples/01-basic/src/views/sections/tabs/tabs.twig
@@ -1,6 +1,6 @@
 <section class="section-tabs">
     <div class="s-container">
-        <div class="s-layout:122">
+        <div class="__layout">
             <div>
                 <div class="__tabs">
                     {% for tab in tabs %}
@@ -15,7 +15,7 @@
 
                 {% for tab in tabs %}
                     <div class="__content" id="{{ tab.id }}">
-                        <h1 class="s-typo:h1 s-mbe:30">{{ tab.title|raw }}</h1>
+                        <h1 class="s-typo:h3 s-mbe:30">{{ tab.title|raw }}</h1>
                         <p class="s-typo:lead s-mbe:20 s-tc:accent">{{ tab.intro|raw }}</p>
                         <p class="s-typo:p">{{ tab.text|raw }}</p>
                         <a class="s-btn s-mbs:40 s-color:accent" href="{{ tab.cta.link.url }}" target="{{ tab.cta.link.target }}">
