--- a/packages/@examples/01-basic/src/css/generic/menu/menu.css
+++ b/packages/@examples/01-basic/src/css/generic/menu/menu.css
@@ -1,4 +1,4 @@
-.s-menu {
+/* .s-menu {
 }
 
 .s-menu__item {
@@ -33,4 +33,4 @@
       transform: rotateX(5deg) rotateY(-35deg) rotateZ(5deg) translateX(-5%);
     }
   }
-}
+} */
