--- a/packages/@examples/01-basic/src/css/generic/menu/menuAbout.css
+++ b/packages/@examples/01-basic/src/css/generic/menu/menuAbout.css
@@ -3,7 +3,15 @@
   background: sugar.color(base, surface);
   @sugar.border.radius();
 
+  @sugar.media mobile {
+    padding: sugar.padding(30);
+  }
+
   * {
     white-space: nowrap;
+
+    @sugar.media mobile {
+      white-space: unset;
+    }
   }
 }
