SFrontspec php class with twig function

--- a/packages/@examples/01-basic/src/views/sections/heading/heading.twig
+++ b/packages/@examples/01-basic/src/views/sections/heading/heading.twig
@@ -8,6 +8,11 @@
     <div class="s-container">
         <div class="__layout">
             <div>
+
+                <pre>
+                    {{ dump(readFrontspec()) }}
+                </pre>
+
                 {% if title %}
                     <h1 class="s-typo:h2 s-mbe:40">
                         {{ title|raw }}
