--- a/packages/@examples/01-basic/src/views/layouts/header/header.css
+++ b/packages/@examples/01-basic/src/views/layouts/header/header.css
@@ -26,13 +26,16 @@
     }
   }
 
-  .s-menu {
-    @sugar.ui.menu();
+  .__menu-toggle {
+    @sugar.ui.toggle ('burger');
+    position: fixed;
+    top: calc(40px - 0.35em);
+    right: 0;
+    font-size: 30px;
+    display: none;
 
-    @sugar.media mobile {
-      top: calc(80px - sugar.margin(30));
-      left: calc(sugar.margin(30) * -1);
-      height: calc(100vh - 80px);
+    @sugar.media <=mobile {
+      display: block;
     }
   }
 
