--- a/packages/@examples/01-basic/src/views/sections/contact/contact.twig
+++ b/packages/@examples/01-basic/src/views/sections/contact/contact.twig
@@ -1,7 +1,7 @@
-<section class="section-contact">
+<section class="section-contact" s-appear in="bottom" delay="600">
     <div class="s-container">
         <div class="__layout">
-            <div>
+            <div s-appear in="left" delay="500">
                 {% include 'sugar/components/contactForm/contactForm.twig' with contactForm only %}
             </div>
             <div>
