--- a/packages/@examples/01-basic/src/views/sections/tabs/tabs.twig
+++ b/packages/@examples/01-basic/src/views/sections/tabs/tabs.twig
@@ -1,7 +1,7 @@
 <section class="section-tabs">
     <div class="s-container">
         <div class="__layout">
-            <div>
+            <div s-appear in="left" delay="600">
                 <div class="__tabs">
                     {% for tab in tabs %}
                         <a class="__tabs-item" href="#{{ tab.id }}" s-activate group="tabs">
@@ -11,7 +11,7 @@
                 </div>
             </div>
 
-            <div>
+            <div s-appear in="right" delay="500">
 
                 {% for tab in tabs %}
                     <div class="__content" id="{{ tab.id }}">
