--- a/packages/tools/sugar/src/views/twig/sugar/menu/generic/generic.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/menu/generic/generic.twig
@@ -9,7 +9,7 @@
                 </a>
             {% endif %}
             {% if item.children %}
-                <ul class="s-menu__children s-menu--level-{{ level }}">
+                <ul class="s-menu__children s-menu--level-{{ level }}" style="--s-menu-items: {{ item.children|length }};">
                     {{ _self.menu(item.children, level + 1)|raw }}
                 </ul>
             {% endif %}
@@ -17,6 +17,9 @@
     {% endfor %}
 {% endmacro %}
 
-<ul class="s-menu {{ attributes.class }} s-menu--level-0" {{ attrs(attributes, ['class']) }}>
-    {{ _self.menu(menu.items, 1)|raw }}
-</ul>
+<input type="checkbox" id="{{ id ? id : 'menu' }}" hidden />
+<div class="s-menu {{ attributes.class }}" {{ attrs(attributes, ['class']) }} style="--s-menu-items: {{ menu.items|length }};">
+    <ul class="s-menu__inner s-menu--level-0">
+        {{ _self.menu(menu.items, 1)|raw }}
+    </ul>
+</div>
