--- a/packages/@examples/01-basic/src/views/components/card/card.css
+++ b/packages/@examples/01-basic/src/views/components/card/card.css
@@ -23,16 +23,35 @@
     @sugar.border.radius();
     transform: rotateX(-5deg) rotateY(35deg) translateX(10%) translateY(-10%);
   }
+  &:hover .s-card__img {
+    @sugar.depth (100);
+    @sugar.border.radius();
+    transform: rotateX(-5deg) rotateY(-25deg) rotateZ(-5deg) translateX(-5%)
+      translateY(-10%) scale(0.9);
+  }
+
   :nth-child(2) > & {
     .s-card__img {
       transform: rotateX(10deg) rotateY(10deg) rotateZ(2deg) translateX(2%)
         translateY(-10%) scale(0.85);
     }
   }
+  :nth-child(2) > &:hover {
+    .s-card__img {
+      transform: rotateX(-5deg) rotateY(35deg) translateX(10%) translateY(-10%);
+    }
+  }
+
   :nth-child(3) > & {
     .s-card__img {
       transform: rotateX(-5deg) rotateY(-35deg) translateX(-10%)
         translateY(-10%);
+    }
+  }
+  :nth-child(3) > &:hover {
+    .s-card__img {
+      transform: rotateX(10deg) rotateY(10deg) rotateZ(2deg) translateX(2%)
+        translateY(-10%) scale(0.85);
     }
   }
 
