--- a/packages/@examples/01-basic/src/views/sections/contact/contact.css
+++ b/packages/@examples/01-basic/src/views/sections/contact/contact.css
@@ -1,37 +1,46 @@
 .section-contact {
-    background: sugar.color(base, background, --darken 5%);
-    padding-block: sugar.padding(100);
-    position: relative;
+  background: sugar.color(base, background, --darken 5%);
+  padding-block: sugar.padding(100);
+  position: relative;
+
+  @sugar.media mobile {
+    padding-block: 0 sugar.padding(50);
+    padding-inline: sugar.padding(30);
+  }
+
+  .__layout {
+    @sugar.layout '1 2';
 
     @sugar.media mobile {
-        padding-block: 0 sugar.padding(50);
-        padding-inline: sugar.padding(30);
+      @sugar.layout '1 _ 2';
+
+      > *:nth-child(2) {
+        display: none;
+      }
     }
+  }
 
-    .__layout {
-        @sugar.layout '1 2';
-
-        @sugar.media mobile {
-            @sugar.layout '1 _ 2';
-
-            > *:nth-child(2) {
-                display: none;
-            }
-        }
+  .s-form {
+    @sugar.media mobile {
+      margin-block-start: calc(sugar.margin(40) * -1);
     }
+  }
 
-    .s-form {
-        @sugar.media mobile {
-            margin-block-start: calc(sugar.margin(40) * -1);
-        }
-    }
+  .__img {
+    position: absolute;
+    bottom: 0;
+    right: calc(50% - sugar.margin(100));
+    height: 800px;
+    transform: translateX(100%);
+    filter: drop-shadow(0 0 100px rgb(0, 0, 0, 0.3)) saturate(1.2);
+    transform-origin: 50% 100%;
+    @sugar.transition();
+  }
 
+  &:hover,
+  &:focus-within {
     .__img {
-        position: absolute;
-        bottom: 0;
-        right: calc(50% - sugar.margin(100));
-        height: 800px;
-        transform: translateX(100%);
-        filter: drop-shadow(0 0 100px rgb(0, 0, 0, 0.3));
+      transform: translateX(90%);
     }
+  }
 }
