--- a/packages/@examples/01-basic/src/views/layouts/header/header.twig
+++ b/packages/@examples/01-basic/src/views/layouts/header/header.twig
@@ -9,9 +9,9 @@
             </div>
             <div class="s-flex-item:grow">
                 {% include 'sugar/menu/generic/generic.twig' with {
-                    id: 'menu'
+                    id: 'primary-menu'
                 } %}
-                <label for="menu" class="__menu-toggle"></label>
+                <label for="primary-menu" class="__menu-toggle"></label>
             </div>
         </nav>
     </div>
