--- a/packages/@examples/01-basic/src/views/layouts/footer/footer.twig
+++ b/packages/@examples/01-basic/src/views/layouts/footer/footer.twig
@@ -9,20 +9,12 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vestibulum varius mauris, vel lobortis sapien ornare vitae.
                 </p>
             </div>
+            <div></div>
             <div>
                 {% include 'sugar/menu/generic/generic.twig' with {
                     'id': 'footer-menu',
-                    'menu': menuFooter
+                    'menu': menus.footer
                 } %}
-            </div>
-            <div>
-                <h4 class="s-typo:h5 s-mbe:30">
-                    Contact
-                </h4>
-                <p class="s-typo:p s-tc:accent s-mbe:10">BuzzBrothers</p>
-                <p class="s-typo:p s-mbe:10">Rue Vautier 37</p>
-                <p class="s-typo:p s-mbe:10">1227 Carouge</p>
-                <a href="tel: 022 300 51 40" class="s-typo:a">+41 22 300 51 40</a>
             </div>
         </div>
     </div>
