--- a/packages/@examples/01-basic/src/views/sections/contact/contact.twig
+++ b/packages/@examples/01-basic/src/views/sections/contact/contact.twig
@@ -4,8 +4,31 @@
             <div s-appear in="left" delay="500">
                 {% include 'sugar/components/contactForm/contactForm.twig' with contactForm only %}
             </div>
-            <div>
-                <img class="__img" src="/dist/img/contact.png" />    
+            <div class="__address">
+                <div>
+                    <h4 class="s-typo:h5 s-mbe:30">
+                        Contact
+                    </h4>
+                    <p class="s-typo:p s-tc:accent s-mbe:10">BuzzBrothers</p>
+                    <p class="s-typo:p s-mbe:10">Rue Vautier 37</p>
+                    <p class="s-typo:p s-mbe:10">1227 Carouge</p>
+                    <a href="tel: 022 300 51 40" class="s-typo:a">+41 22 300 51 40</a>
+                    <div class="__socials">
+                        <a href="/" title="Facebook" target="_blank">
+                            <i class="s-icon:facebook"></i>
+                        </a>
+                        <a href="/" title="Twitter" target="_blank">
+                            <i class="s-icon:twitter"></i>
+                        </a>
+                        <a href="/" title="Instagram" target="_blank">
+                            <i class="s-icon:instagram"></i>
+                        </a>
+
+                    </div>
+                </div>
+                <div>
+                    <img class="__map" src="https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyAvbt4SUI07-9GmH3B6rGbEkCn25Qsi-SE&center=46.18377246655043,6.142042099999996&zoom=18&format=png&maptype=roadmap&style=element:geometry%7Ccolor:0x212121&style=element:labels.icon%7Cvisibility:off&style=element:labels.text.fill%7Ccolor:0x757575&style=element:labels.text.stroke%7Ccolor:0x212121&style=feature:administrative%7Celement:geometry%7Ccolor:0x757575&style=feature:administrative.country%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&style=feature:administrative.land_parcel%7Cvisibility:off&style=feature:administrative.locality%7Celement:labels.text.fill%7Ccolor:0xbdbdbd&style=feature:poi%7Celement:labels.text.fill%7Ccolor:0x757575&style=feature:poi.park%7Celement:geometry%7Ccolor:0x181818&style=feature:poi.park%7Celement:labels.text.fill%7Ccolor:0x616161&style=feature:poi.park%7Celement:labels.text.stroke%7Ccolor:0x1b1b1b&style=feature:road%7Celement:geometry.fill%7Ccolor:0x2c2c2c&style=feature:road%7Celement:labels.text.fill%7Ccolor:0x8a8a8a&style=feature:road.arterial%7Celement:geometry%7Ccolor:0x373737&style=feature:road.highway%7Celement:geometry%7Ccolor:0x3c3c3c&style=feature:road.highway.controlled_access%7Celement:geometry%7Ccolor:0x4e4e4e&style=feature:road.local%7Celement:labels.text.fill%7Ccolor:0x616161&style=feature:transit%7Celement:labels.text.fill%7Ccolor:0x757575&style=feature:water%7Celement:geometry%7Ccolor:0x000000&style=feature:water%7Celement:labels.text.fill%7Ccolor:0x3d3d3d&size=480x330" />
+                </div>
             </div>
         </div>
     </div>
