--- a/packages/@examples/02-basic/src/views/layouts/footer/footer.css
+++ b/packages/@examples/02-basic/src/views/layouts/footer/footer.css
@@ -1,56 +1,54 @@
 .footer {
     background: sugar.color(base, surface);
-    padding-block: sugar.padding(100);
+    padding-block: sugar.padding(60);
 
     .logo {
         width: 150px;
     }
 
     .s-layout {
-        @sugar.layout ('1 2 2 3');
+        @sugar.layout ('1 2 2 2');
         gap: sugar.margin(50);
+        align-items: center;
 
         @sugar.media <=mobile {
             padding-inline: sugar.padding(30);
-            @sugar.layout ('1 _ 2 _ 3');
-        }
-    }
-
-    .s-menu--level-0 {
-        @sugar.layout ('1 2');
-
-        @sugar.media <=mobile {
             @sugar.layout ('1 _ 2');
         }
     }
 
-    .s-menu__link--level-0 {
-        display: block;
-        font-weight: bold;
-        font-size: sugar.font.size(50);
-        font-family: sugar.font.family(title);
-        margin-block-end: sugar.margin(50);
-    }
-    .s-menu__item.s-menu__item--level-0:not(:first-child) {
+    .s-menu__inner {
+        display: flex;
+        justify-content: flex-end;
+        gap: sugar.margin(50);
+
         @sugar.media <=mobile {
-            margin-block-start: sugar.margin(50);
+            flex-direction: column;
         }
     }
 
-    .s-menu__link--level-1 {
+    .s-menu__link {
         display: block;
+        padding: sugar.padding(30) sugar.padding(50);
+        border: 1px solid sugar.color(accent);
+        border-radius: 999px;
         font-size: sugar.font.size(40);
-        margin-block-end: sugar.margin(30);
+        white-space: nowrap;
+        @sugar.transition (fast);
+
+        i {
+            color: sugar.color(accent);
+            margin-inline-end: sugar.margin(20);
+            @sugar.transition (fast);
+        }
 
         &:hover {
-            color: sugar.color(accent);
-        }
+            background: sugar.color(accent);
 
-        &:before {
-            content: '-';
-            color: sugar.color(accent);
-            font-weight: bold;
-            margin-inline-end: sugar.margin(10);
+            &,
+            i {
+                color: sugar.color(accent, foreground);
+            }
         }
     }
 }
