--- a/packages/@examples/02-basic/src/views/layouts/header/header.css
+++ b/packages/@examples/02-basic/src/views/layouts/header/header.css
@@ -12,8 +12,7 @@
   @sugar.transition();
 
   body.scrolled & {
-    top: 0;
-    padding-block: sugar.padding(10);
+    /* padding-block: sugar.padding(10); */
     background: sugar.color(base, background, --alpha 1);
   }
 
@@ -42,7 +41,8 @@
   }
 
   .logo {
-    width: 150px;
+    width: 200px;
+    position: relative;
 
     @sugar.media mobile {
       width: 130px;
@@ -55,15 +55,30 @@
     }
   }
 
-  .__menu-toggle {
-    position: fixed;
+  .__toggle {
+    padding: sugar.padding(10);
+    aspect-ratio: 1;
+    position: absolute;
     top: 53px;
-    right: sugar.margin(30);
+    right: calc(50% - calc(sugar.theme(layout.container.default) * 0.5));
     font-size: 30px;
-    display: none;
+    z-index: 10;
+
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -0.4em;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: sugar.color(base, background);
+      transform: translateY(-100%);
+    }
 
     @sugar.media <=mobile {
-      display: block;
+      top: sugar.margin(40);
+      right: sugar.margin(30);
     }
   }
 }
