--- a/packages/@examples/02-basic/src/views/sections/slider/slider.twig
+++ b/packages/@examples/02-basic/src/views/sections/slider/slider.twig
@@ -1,6 +1,6 @@
 <section class="section-slider">
     <div class="s-container">
-        <s-slider nav controls>
+        <s-slider nav controls lnf="default-tight">
             {% for slide in slides %}
                 <div s-slider-slide class="__slide">
                     <img src="{{ slide.image.url }}" alt="{{ slide.image.alt }}" title="{{ slide.image.title }}" />
