--- a/packages/components/s-slider-component/src/css/s-slider-component.css
+++ b/packages/components/s-slider-component/src/css/s-slider-component.css
@@ -12,13 +12,41 @@
 .s-slider[behavior='default'] {
     > .s-slider__root {
         > .s-slider__slides-wrapper {
-            overflow-x: hidden;
+            > .s-slider__slides {
+                overflow-x: auto;
+                overflow-y: hidden;
+                /* scroll-snap-type: x mandatory; */
+                scroll-behavior: smooth;
+
+                /* hide scrollbars */
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+            }
+
+            > .s-slider__slides > ::slotted([s-slider-slide]) {
+                /* scroll-snap-align: center; */
+            }
 
             /* > .s-slider__slides {
                 position: relative;
-                left: calc(var(--s-slider-slide) * 100% * -1);
-                transform: translateX(calc(var(--s-slider-slide) * 100% * -1));
-            } */
+                /* left: calc(var(--s-slider-slide) * 100% * -1); */
+            /* transform: translateX(calc(var(--s-slider-slide) * 100% * -1)); */
+        }
+    }
+
+    &[direction='vertical'] {
+        > .s-slider__root {
+            > .s-slider__slides-wrapper {
+                > .s-slider__slides {
+                    overflow-x: hidden;
+                    overflow-y: auto;
+                    /* scroll-snap-type: y mandatory; */
+                }
+            }
         }
     }
 }
@@ -48,7 +76,6 @@
             left: 0;
             width: 100%;
             height: 100%;
-            overflow: hidden;
 
             > .s-slider__slides {
                 display: flex;
@@ -67,7 +94,7 @@
             display: flex;
             gap: calc(var(--s-slider-space) * 0.5);
 
-            > * {
+            > *:not(template) {
                 border-radius: 50%;
                 display: block;
                 width: 0.5em;
@@ -112,11 +139,11 @@
         transform: translate(0, -50%);
     }
 
-    &[lnf*='tight'][direction='horizontal'][controls] {
+    &[lnf*='tight'][controls] {
         padding-left: calc(var(--s-slider-space) + 1em);
         padding-right: calc(var(--s-slider-space) + 1em);
     }
-    &[lnf*='tight'][direction='horizontal'][nav] {
+    &[lnf*='tight'][nav] {
         padding-bottom: calc(var(--s-slider-space) + 1em);
     }
 
