--- a/packages/@examples/01-basic/src/css/index.css
+++ b/packages/@examples/01-basic/src/css/index.css
@@ -4,28 +4,29 @@
 @sugar.import ('./generic/**/*.css');
 
 body {
-    background: sugar.color(base, background);
+  background: sugar.color(base, background);
+  overflow-x: hidden;
 
-    &.initial-loading .content {
-        display: none;
-    }
+  &.initial-loading .content {
+    display: none;
+  }
 }
 
 /* logo */
 .logo {
+  svg [fill='white'] {
+    fill: sugar.color(main, --darken 10);
+  }
+  svg [fill='#FEBD0F'] {
+    fill: sugar.color(accent);
+  }
+
+  @sugar.theme.when (dark) {
     svg [fill='white'] {
-        fill: sugar.color(main, --darken 10);
+      fill: sugar.color(main, text);
     }
     svg [fill='#FEBD0F'] {
-        fill: sugar.color(accent);
+      fill: sugar.color(accent);
     }
-
-    @sugar.theme.when (dark) {
-        svg [fill='white'] {
-            fill: sugar.color(main, text);
-        }
-        svg [fill='#FEBD0F'] {
-            fill: sugar.color(accent);
-        }
-    }
+  }
 }
