--- a/packages/tools/sugar/src/views/twig/sugar/bare/cell/cell.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/bare/cell/cell.twig
@@ -1,3 +1,3 @@
-<div {{ attrs(attributes)|raw }} {% endfor %}>
+<div class="s-cell {{ attributes.class }}" {{ attrs(attributes, ['class'])|raw }}>
     {{ content|raw }}
 </div>
