--- a/packages/tools/sugar/src/views/twig/sugar/components/card/card.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/components/card/card.twig
@@ -2,7 +2,7 @@
 
     {% if image %}
         <div class="s-card__img-container">
-            <img class="s-card__img s-mbe:{{ spacing ? spacing : '30' }}" src="{{ image.url }}" alt="{{ image.alt }}" title="{{ image.title }}" />
+            <img class="s-card__img" src="{{ image.url }}" alt="{{ image.alt }}" title="{{ image.title }}" />
         </div>
     {% endif %}
 
