--- a/packages/@examples/01-basic/src/views/sections/card/card.twig
+++ b/packages/@examples/01-basic/src/views/sections/card/card.twig
@@ -2,10 +2,10 @@
     <div class="s-container">
         <div class="s-layout">
             <div>
-                {% include 'sugar/components/card/card.twig' with card only %}
+                {% include 'sugar/components/card/card.twig' with cardOne only %}
             </div>
             <div>
-                {% include 'sugar/components/card/card.twig' with card1 only %}
+                {% include 'sugar/components/card/card.twig' with cardTwo only %}
             </div>
         </div>
     </div>
