--- a/packages/@examples/01-basic/src/css/generic/sections/specs.css
+++ b/packages/@examples/01-basic/src/css/generic/sections/specs.css
@@ -9,6 +9,10 @@
   position: relative;
   z-index: 20;
 
+  @sugar.media <=mobile {
+    margin-block-start: 0;
+  }
+
   .s-layout {
     @sugar.media mobile {
       gap: sugar.margin(100);
