--- a/packages/@examples/01-basic/src/views/sections/card/card.twig
+++ b/packages/@examples/01-basic/src/views/sections/card/card.twig
@@ -1,5 +1,5 @@
 <section class="section-card">
-    <div class="s-container">
+    <div class="s-container:wide">
         <div class="s-layout">
             <div>
                 {% include 'sugar/components/card/card.twig' with cardOne only %}
