--- a/packages/@examples/01-basic/src/css/generic/sections/specs.css
+++ b/packages/@examples/01-basic/src/css/generic/sections/specs.css
@@ -37,7 +37,7 @@
       & > *:nth-child(1) .card {
         position: relative;
         top: -100px;
-        left: -50px;
+        left: 0;
         transform: rotateX(5deg) rotateY(5deg) rotateZ(2deg);
       }
       & > *:nth-child(2) .card {
@@ -49,7 +49,7 @@
       & > *:nth-child(3) .card {
         position: relative;
         top: -40px;
-        left: 50px;
+        left: 0;
         transform: rotateX(5deg) rotateY(5deg) rotateZ(-1deg);
       }
     }
