--- a/packages/@examples/01-basic/src/views/sections/heading/heading.twig
+++ b/packages/@examples/01-basic/src/views/sections/heading/heading.twig
@@ -3,7 +3,7 @@
         {# <video autoplay loop>
             <source src="/dist/video/heading-background.mp4" type="video/mp4" />
         </video> #}
-        <img src="/dist/img/macos-wallpaper-01.jpg" />
+        <img src="{{ bkg.url }}" />
     </div>
     <div class="s-container">
         <div class="__layout">
