--- a/packages/@examples/02-basic/src/views/sections/contact/contact.twig
+++ b/packages/@examples/02-basic/src/views/sections/contact/contact.twig
@@ -1,7 +1,7 @@
-<section class="section-contact" s-appear in="right" delay="600">
+<section class="section-contact" s-appear in="left" delay="600">
     <div class="s-container">
         <div class="__layout">
-            <div s-appear in="left" delay="500">
+            <div s-appear in="top" delay="700">
                 {% include 'sugar/components/contactForm/contactForm.twig' with contactForm only %}
             </div>
             <div>
