--- a/packages/@examples/02-basic/src/views/sections/separator/separator.twig
+++ b/packages/@examples/02-basic/src/views/sections/separator/separator.twig
@@ -1,4 +1,4 @@
-<section class="section-separator">
+<section class="section-separator" s-appear in="bottom" delay="400">
     <div class="__bkg">
         {% if image %}
             <img class="__img" src="{{ image.url }}" alt="{{ image.alt }}" />
