--- a/packages/@examples/02-basic/src/views/sections/slider/slider.twig
+++ b/packages/@examples/02-basic/src/views/sections/slider/slider.twig
@@ -1,4 +1,4 @@
-<section class="section-slider">
+<section class="section-slider" s-appear in="bottom" delay="300">
     <div class="s-container">
         <s-slider nav controls lnf="default-tight">
             {% for slide in slides %}
