--- a/packages/@examples/02-basic/src/views/sections/tabs/tabs.css
+++ b/packages/@examples/02-basic/src/views/sections/tabs/tabs.css
@@ -2,20 +2,43 @@
   position: relative;
   z-index: 10;
   perspective: 800px;
+  padding-block-end: sugar.margin(100);
 
-  .__layout {
-    @sugar.layout ('1 2 2');
+  @sugar.media <=mobile {
+    padding-block-end: 0;
+  }
 
-    @sugar.media mobile {
-      @sugar.layout ('1 _ 2');
+  .s-container {
+    position: relative;
+  }
+
+  .s-layout {
+  }
+
+  .__img {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    mix-blend-mode: darken;
+    z-index: 10;
+    pointer-events: none;
+
+    @sugar.media <=mobile {
+      display: none;
     }
   }
 
   .__tabs {
-    background-color: sugar.color(base, surface);
-    transform: rotateX(-5deg) rotateY(15deg) translateX(0%) translateY(-10%);
+    display: flex;
+    background-color: sugar.color(base, surface, --darken 1%);
+    transform: rotateX(-5deg) rotateY(15deg) translateX(0%) translateY(0);
     position: relative;
     z-index: 10;
+
+    @sugar.media <=mobile {
+      flex-direction: column;
+      @sugar.depth (100);
+    }
   }
 
   .__tabs-item {
@@ -30,10 +53,6 @@
     transform: scale(1);
     position: relative;
     @sugar.transition (fast);
-
-    &:not(:last-child) {
-      border-bottom: 1px solid sugar.color(accent, --alpha 0.1);
-    }
 
     &:hover {
       background: sugar.color(accent, --alpha 0.6);
@@ -54,7 +73,7 @@
   }
 
   .__content {
-    padding: sugar.padding(50);
+    padding: sugar.padding(50) sugar.padding(60);
     background-color: sugar.color(base, surface);
     background-image: linear-gradient(
       -45deg,
